style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}
.container{
    display:flex;
    align-items: center;
    justify-content: space-between;
    position:fixed;
    top:0;
    width:100%;
    height:86px;
    border-bottom: 1px solid rgb(238, 238, 238);;
    z-index: 1000;
    background-color: white;
}
#vertical-line{
    height:86px;
    border:1px solid rgb(231,231,231);
}
.logo{
    padding: 0px 25px;
}
.logo svg{
    width: 80%;
    height: 40px;
}
.location{
    padding-left: 4%;
    align-items: center;
}
.location-title{
    width:320px;
    font-size: 16px;
    font-weight: 800;
    letter-spacing: 0.5px;
    margin-bottom:3px;

}
.location-desc{
    font-size: 12px;
}

.fa-sort-down{
    transform: translateY(-2px);
    padding-left: 5px;
    font-size: 18px;
}
.search-bar{
    width:50%;
    border:1px solid rgba(0,0,0,0.04);
    border-radius: 12px;
    background: rgb(248,248,248);
    color:rgb(130,130,130);
    display: flex;
    align-items: center;
    height:45px;
}
.search-bar input{
    width:100%;
    font-size:80%;
    font-weight:400;
    border:0;
    outline: 0;
    background-color: transparent;
}
.search-bar .fa-magnifying-glass{
    color:black;
    padding:8px;
}
.login{
    border:0;
    outline:0;
    background-color: white;
    font-size: 16px;
    font-weight: 400;
    margin:0 4%;
}
.mycart{
    color:white;
    background-color: rgb(12, 131, 31);
    border-radius: 8px;
    cursor: pointer;
    height: 52px;
    width: 130px;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
    display: flex;
    border:none ;
    gap:5px;
    font-size: 12px;
    font-weight: bold;
    margin-right: 2%;
    padding: 10px;
}
.wrapper{
    display:flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    position: relative;
    top:90px;
}
.main-container{
    max-width: 1280px;
}
#section-1 img{
    width:100%;
}
#section-2{
    display:flex;
    gap: 15px;
    overflow: auto;
    margin: 0px 16px;
}
#section-2 img{
    width:335px;
    height: 195px;
}
#section-3{
    display:grid;
    grid-template-columns: repeat(10, 10%);

}
#section-3 img{
    width: 100%;
}
#section-4{
    display: flex;
    flex-direction: column;
    margin:14px;
    row-gap: 20px;
}

.title{
    display: flex;
    justify-content: space-between;
}

.title .category-name{
    font-weight: 700;
}

.title a{
    color: rgb(12, 131, 31);;
    text-decoration: none;
}

.list-items{
    display: flex;
    column-gap: 15px;    
}

.list-items .items{
    border: 0.5px solid rgb(232, 232, 232);
    box-shadow: rgba(0, 0, 0, 0.04) 2px 2px 8px;
    border-radius: 8px;
    padding: 20px;
}

.items .item-image img{
    width: 100%;
}

.item-details{
    display: flex;
    flex-direction: column;
    row-gap: 8px;
}
.timer{
    width:45%;
}

.item-details .timer{
    font-size: 7px;
    font-weight: bolder;
    background-color: rgb(248, 247, 247);
    padding: 3px;
    
}

.item-details .item-name{
    overflow: hidden;
    color: rgb(31, 31, 31);
    font-weight: 600;
    font-size: 13px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    line-height: 18px;
    width: 100%;
    height: 36px;
    margin-bottom: 6px;
}

.item-details .item-weight{
    font-size: 10px;
    color: grey;
}

.item-price{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.item-price .price{
    font-size: 10px;
    font-weight: 800;
}

.item-price button{
    font-size: 10px;
    font-weight: 800;
    text-transform: uppercase;
    padding: 3px 9px;
    color: rgb(49, 134, 22);
    border: 1px solid rgb(49, 134, 22);
    border-radius: 3px;
    background-color: rgb(247, 255, 249);

}

footer{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
    position: relative;
    top: 85px;
}

.fa-heart{
    color: red;
}
@media screen(max-width:480px) {

    
}

